@@ -1,7 +1,7 @@
 /* $Id$ */
 .views-exposed-form .views-exposed-widget {
-  float: left;
-  padding: .5em 1em 0 0;
+  float: left; /* LTR */
+  padding: .5em 1em 0 0; /* LTR */
 }
 
 .views-exposed-form .views-exposed-widget .form-submit {
